| Summary: | ASTERISK-28886: chan_pjsip: PJSIP_SC_NULL does not exist in pjproject 2.7.2 | ||||
| Reporter: | Jared Smith (jsmith) | Labels: | |||
| Date Opened: | 2020-05-11 13:24:37 | Date Closed: | 2020-06-25 09:24:35 | ||
| Priority: | Major | Regression? | No | ||
| Status: | Closed/Complete | Components: | Channels/chan_pjsip | ||
| Versions: | 16.6.0 16.10.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Fedora 31 x86_64 | Attachments: | |||
| Description: | channels/chan_pjsip.c blindly uses the PJSIP_SC_NULL constant, around line 1999, without checking (in ./configure) whether or not it actually exists. It only exists in pjproject 2.8 and later. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2020-05-11 13:24:38.360-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Joshua C. Colp (jcolp) 2020-05-11 13:33:56.077-0500 This change went into 16.6.0, so it's been around the last 4 versions. By: Friendly Automation (friendly-automation) 2020-06-25 09:24:36.398-0500 Change 14605 merged by Joshua Colp: chan_pjsip: don't use PJSIP_SC_NULL as it only exists pjproject 2.8+ [https://gerrit.asterisk.org/c/asterisk/+/14605|https://gerrit.asterisk.org/c/asterisk/+/14605] By: Friendly Automation (friendly-automation) 2020-06-25 09:50:10.024-0500 Change 14571 merged by George Joseph: chan_pjsip: don't use PJSIP_SC_NULL as it only exists pjproject 2.8+ [https://gerrit.asterisk.org/c/asterisk/+/14571|https://gerrit.asterisk.org/c/asterisk/+/14571] By: Friendly Automation (friendly-automation) 2020-06-25 09:50:24.150-0500 Change 14604 merged by George Joseph: chan_pjsip: don't use PJSIP_SC_NULL as it only exists pjproject 2.8+ [https://gerrit.asterisk.org/c/asterisk/+/14604|https://gerrit.asterisk.org/c/asterisk/+/14604] | ||||